# RC-IRSTD-v2

./: .gitignore  Makefile  PATCH_MANIFEST.json  README.md  build_episodes.py  convert_upstream_checkpoint.py  evaluate_causal.py  export_scores.py  infer_online.py  main.py  make_synthetic.py  pyproject.toml  requirements.txt  run_pipeline.py  test.py  train.py  train_calibrator.py  train_detector.py
certification/: __init__.py  build_calibration_losses.py  calibrate_target_offset.py  conformal_offset.py  evaluate_certified_mode.py
configs/: aaai27_model_success_contract_v1.json  aaai27_model_success_contract_v1.json.sha256  calibrator.yaml  calibrator_outer_lodo.yaml  detector.yaml  detector_mshnet_ft_outer_irstd.yaml  detector_mshnet_ft_outer_nuaa.yaml  detector_mshnet_ft_outer_nudt.yaml  detector_mshnet_outer_nuaa_sls.yaml  detector_mshnet_outer_nudt_sls.yaml  detector_mshnet_source_irstd_sls.yaml  detector_mshnet_source_nuaa_sls.yaml  detector_mshnet_source_nudt_sls.yaml  detector_rc_mshnet_fast_aaai.yaml  detector_rc_mshnet_from_scratch_aaai.yaml  detector_rc_mshnet_outer_irstd_fast.yaml  detector_rc_mshnet_outer_nuaa_fast.yaml  detector_rc_mshnet_outer_nudt_fast.yaml  detector_rc_mshnet_tailrank_ablation.yaml  phase2_mshnet_ft_outer_nuaa.yaml  phase2_rc_mshnet_branch_aux_outer_nuaa.yaml  phase2_rc_mshnet_full_outer_nuaa.yaml  phase2_rc_mshnet_no_component_outer_nuaa.yaml  phase2_rc_mshnet_no_contrast_outer_nuaa.yaml  phase2_rc_mshnet_no_gate_outer_nuaa.yaml  pipeline.yaml  pipeline_outer_irstd.yaml  pipeline_outer_irstd_rc_mshnet_v4.yaml  pipeline_outer_nuaa.yaml  pipeline_outer_nudt.yaml  (+25 more)
(+309 files in other folders)
